# kts

./: ChangeLog  Makefile.am  NEWS  TODO  config.h.in  configure.in  svn-commit.tmp
dict/: Makefile.am  chkcon.c  excdict.c  getdict.c  lkdict.c  mkdict.c  paren.c  predict.c  putmarker.c  putsem.c  rmdict.c
dict/.deps/: chkcon.P  excdict.P  getdict.P  lkdict.P  mkdict.P  predict.P  putmarker.P  putsem.P
include/: hantable.h
misc/: calcdiff.c  calcdiff2.c  getdiff.c  plus.c  splitdiff.c  spltdif.c
misc/Evaluation/: Makefile.am  calcmore.c  ncomp.c
misc/GetLEXFEATURE/: Makefile.am
src/: Makefile.am  kimmocode.c  kts.c  ktsdemo.c  ktsdemo2.c  ktsdemo3.c  ktsformat.c  ktsmoran.c  ktspell.c  ktsunknown.c  ktsutil.c  lookup.c
tools/Irregular/: IRRVERB_L  irr.L
